--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ethers": "^5.6.2",
     "hardhat": "^2.9.2",
     "hardhat-gas-reporter": "^1.0.8",
+    "jsbi": "^4.3.0",
     "prettier": "^2.6.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.7",
